--- a/TCBApp/TCBApp/TCBApp.csproj
+++ b/TCBApp/TCBApp/TCBApp.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Npgsql" Version="8.0.0-preview.4" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
