--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,8 +12,9 @@ on:
 jobs:
   build:
   
-    runs-on: ubuntu-latest
-
+#     runs-on: ubuntu-latest
+    runs-on: self-hosted
+    
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -28,6 +29,5 @@ jobs:
       run: dotnet build --no-restore
 #     - name: Test
 #       run: dotnet test --no-build --verbosity normal
-  deploy:
-    runs-on: self-hosted
+    
   
