--- a/TCBApp/TCBApp/TCBApp.csproj
+++ b/TCBApp/TCBApp/TCBApp.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CloneExtensions" Version="1.4.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
