--- a/TCBApp/TCBApp.WebApi/TCBApp.WebApi.csproj
+++ b/TCBApp/TCBApp.WebApi/TCBApp.WebApi.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+
+    <ItemGroup>
+      <ProjectReference Include="..\TCBApp.Core\TCBApp.Core.csproj" />
+    </ItemGroup>
+
 </Project>
